
	* modreg daemon: Anpassung an Freetz
	* allcfgconv -e: Robusteres Auslesen der Konfiguration bei einigen
	Labor-Firmwares

	callmonitor-1.18.7

2010-11-27:

	* billiger.sh: Neue Fallback-Suche billiger-telefonieren.de statt Google
	* search_ch.sh: Schweizer Rückwärtssuche repariert

	callmonitor-1.18.8

2011-01-14:

	* pronto_it.sh: Rückwärtssuche für Italien

2011-02-05:

	* telefonbuch.sh: Rückwärtssuche repariert ("Karte Zusatzinfo" aus
	  Antwort entfernt)
	* goyellow.sh: Fehlschlagende Suchen repariert

	callmonitor-1.19

2011-05-29:

	* webui.sh: Änderungen an webui_get zurückgenommen (zugunsten neuerer
	Labor-Firmwares)

2011-06-02:

	callmonitor-1.19.1

2011-08-04:

	* callmonitor.cfg: Neuer Standardwert bei erster Installation:
	Callmonitor nicht automatisch aktiviert

2011-09-03:

	* wittegids_be.sh: Belgische Rückwärtssuche

	callmonitor-1.19.2

2011-09-25:

	* Kleine Anpassungen/Umbenennungen im Webinterface
	* 11880.sh: Bewertung "(0)" aus Ergebnis entfernt
	* dasoertliche.sh: (schon wieder) Anpassung an geändertes Format

	callmonitor-1.19.3

2012-02-29:

	* reverse-userdef: Erlaubt die Einbindung einer benutzerdefinierten
	Rückwärtssuche (Kurzanleitung: /tmp/flash/callmonitor/reverse-userdef
	muss ausführbar sein, wird aufgerufen mit Rufnummer als Argument (im
	internationalen Format, z.B. +498912345); existiert ein Name, Ausgabe
	auf STDOUT: "Name; Adresse" (einzeilig; in Latin-1), Rückgabewert 0;
	existiert kein Name, Rückgabewert 1; bei Fehlern Rückgabewert 2 oder
	größer.)

2012-03-03:

	* callmonitor: Neue Variable UUID steht Aktionen zur Verfügung. Sie
	identifiziert den Anruf (Folge von *:request bis *:disconnect oder
	*:cancel), nicht ein einzelnes Ereignis: Wie ID, nur
	(im Rahmen der zufälligen UUID-Erzeugung) global eindeutig.

	* herold_at.sh: An Änderungen angepasst
	* telefonbuch_at.sh: DasSchnelle.at: An Änderungen angepasst

2012-03-04:

	callmonitor-1.20

	* config.sh: Aktion "config wlan guest [on|off]" schaltet Gast-WLAN