@@ -9,7 +9,6 @@ R	search_ch	41!	www.search.ch	search.ch
 R	local_ch	41	tel.local.ch	local.ch
 R	pronto_it	39!	pronto.it	pronto.it
 R	wittegids_be	32!	www.wittegids.be	wittegids.be
-R	anywho	1!	www.anywho.com	AnyWho
 R	adaffix	*!	m.adaffix.com	adaffix
 R	userdef	*	.	$(lang de:"Benutzerdefiniert" en:"User-defined")
 A	billiger	*	www.billiger-telefonieren.de	billiger-telefonieren.de
